search by name and location
